--- a/client/src/layout/components/nav.sass
+++ b/client/src/layout/components/nav.sass
@@ -1,10 +1,11 @@
 @import '../config/_colors'
+@import '../config/_variables'
   
 .nav
   display: flex
   align-items: center
   justify-content: space-between
-  height: 120px
+  height: $nav-height
   padding: 0 60px
 
 .nav__logo
