--- a/client/src/layout/components/nav.sass
+++ b/client/src/layout/components/nav.sass
@@ -7,6 +7,10 @@
   justify-content: space-between
   height: $nav-height
   padding: 0 60px
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
 
 .nav__logo
   width: 32px
