--- a/client/src/layout/components/hero.sass
+++ b/client/src/layout/components/hero.sass
@@ -6,12 +6,8 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  height: 100vh
+  height: calc(100vh - #{$footer-height})
   width: 100%
-  position: absolute
-  top: 0
-  left: 0
-  right: 0
 
 .hero__header
   color: $color-black
