Style go to fund link

--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -58,3 +58,10 @@
   color: $color-white
   margin-top: 16px
   cursor: pointer
+
+.create-fund__link
+  text-decoration: none
+  margin-top: 8px
+  color: $color-gold
+  font-weight: 300
+  font-size: 18px
