Style fund details

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -17,3 +17,17 @@
 .fund__expiration--until
   color: $color-grey
   margin-right: 8px
+
+.fund__details
+  display: flex
+  flex-direction: column
+  align-items: center
+
+.fund__detail
+  font-size: 20px
+  color: $color-black
+  font-weight: 300
+
+.fund__detail--bold
+  font-weight: 400
+  margin-right: 4px
