--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -22,11 +22,13 @@
   display: flex
   flex-direction: column
   align-items: center
+  margin-top: 16px
 
 .fund__detail
-  font-size: 20px
+  font-size: 18px
   color: $color-black
   font-weight: 300
+  margin: 4px 0
 
 .fund__detail--bold
   font-weight: 400
