Setup deposit and withdrawal buttons

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -18,6 +18,10 @@
   color: $color-grey
   margin-right: 8px
 
+.fund__button
+  margin: 8px 0
+  width: 380px
+
 .fund__details
   display: flex
   flex-direction: column
