--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -16,6 +16,7 @@
   z-index: 2
 
 .deposit__modal
+  position: relative
   background: $color-white
   display: flex
   flex-direction: column
@@ -25,6 +26,12 @@
   border-radius: 3px
   border: 1px solid $color-grey
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25)
+
+.deposit__x
+  position: absolute
+  right: 14px
+  top: 14px
+  cursor: pointer
 
 .deposit__header
   font-size: 32px
@@ -48,6 +55,7 @@
   font-size: 24px
   margin-top: 16px
 
+// TODO: Make placeholder text faded, but not actual input text
 .deposit__input
   height: 32px
   width: 360px
