--- a/client/src/layout/components/withdraw.sass
+++ b/client/src/layout/components/withdraw.sass
@@ -1,7 +1,7 @@
 @import '../config/_colors'
 @import '../config/_variables'
 
-.withdraw
+.withdraw__background
   position: absolute
   top: 0
   left: 0
@@ -15,7 +15,7 @@
   background: rgba($color-black, 0.25)
   z-index: 2
 
-.withdraw__modal
+.withdraw
   position: relative
   background: $color-white
   display: flex
