Add message for no assets deposited yet

--- a/client/src/layout/components/assets.sass
+++ b/client/src/layout/components/assets.sass
@@ -44,3 +44,8 @@
 
 .assets__asset-info--amount
   font-weight: 300
+
+.asset__empty
+  font-weight: 300
+  color: $color-black
+  margin: 8px 0 0 0
