Conditionally render expiration message

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -18,6 +18,10 @@
   color: $color-grey
   margin-right: 8px
 
+.fund__expiration--unlocked
+  font-size: 36px
+  margin: 24px 0
+
 .fund__button
   margin: 8px 0
   width: 380px
