Set page heights as min-height

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -7,7 +7,7 @@
   align-items: center
   justify-content: center
   width: 100%
-  height: calc(100vh - #{$footer-height})
+  min-height: calc(100vh - #{$footer-height})
 
 .fund__expiration
   font-size: 28px
