--- a/client/src/layout/components/fundcreated.sass
+++ b/client/src/layout/components/fundcreated.sass
@@ -1,7 +1,7 @@
 @import '../config/_variables'
   
 .fund-created
-  height: calc(100vh - #{$footer-height})
+  min-height: calc(100vh - #{$footer-height})
   width: 100%
   display: flex
   align-items: center
