--- a/client/src/layout/components/hero.sass
+++ b/client/src/layout/components/hero.sass
@@ -6,7 +6,7 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  height: calc(100vh - #{$footer-height})
+  min-height: calc(100vh - #{$footer-height})
   width: 100%
 
 .hero__header
