Introduce more sass variables for simpler maintenance

--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -36,7 +36,7 @@
   width: 100%
   text-align: center
   border: 1px solid rgba($color-black, 0.5)
-  border-radius: 3px
+  border-radius: $border-radius
   height: 32px
   font-size: 18px
   font-weight: 300
@@ -49,6 +49,6 @@
 .create-fund__link
   text-decoration: none
   margin-top: 8px
-  color: $color-gold
+  color: $color-brand
   font-weight: 300
   font-size: 18px
