--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -9,7 +9,7 @@
   align-items: center
   justify-content: center
   padding: 40px
-  border-radius: 3px
+  border-radius: $border-radius
   border: 1px solid $color-grey
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25)
 
@@ -59,7 +59,7 @@
 .deposit__input
   height: 32px
   width: 360px
-  border-radius: 3px
+  border-radius: $border-radius
   border: 1px solid $color-grey
   text-align: center
   font-size: 18px
