--- a/client/src/layout/components/footer.sass
+++ b/client/src/layout/components/footer.sass
@@ -6,7 +6,7 @@
   align-items: center
   justify-content: space-between
   height: $footer-height
-  padding: 0 60px
+  padding: 0 $outer-padding
 
 .footer__disclaimer
   color: $color-black
