--- a/client/src/layout/components/message.sass
+++ b/client/src/layout/components/message.sass
@@ -7,10 +7,10 @@
   bottom: $footer-height
   left: 60px
   font-size: 18px
-  background: $color-gold
+  background: $color-brand
   color: $color-white
   padding: 8px 16px
-  border-radius: 3px
+  border-radius: $border-radius
   text-decoration: none
   cursor: pointer
   opacity: 0
