--- a/client/src/layout/components/nav.sass
+++ b/client/src/layout/components/nav.sass
@@ -6,7 +6,7 @@
   align-items: center
   justify-content: space-between
   height: $nav-height
-  padding: 0 60px
+  padding: 0 $outer-padding
   position: absolute
   top: 0
   left: 0
@@ -26,7 +26,7 @@
 
 .nav__button
   background: $color-white
-  border: 1px solid $color-gold
-  border-radius: 3px
-  color: $color-gold
+  border: 1px solid $color-brand
+  border-radius: $border-radius
+  color: $color-brand
   padding: 6px 12px
