--- a/client/src/layout/components/button.sass
+++ b/client/src/layout/components/button.sass
@@ -1,4 +1,5 @@
 @import '../config/_colors'
+@import '../config/_variables'
   
 .hero__button
   font-size: 32px
@@ -7,18 +8,18 @@
   margin: 0 8px
   text-decoration: none
   text-align: center
-  border-radius: 3px
+  border-radius: $border-radius
   display: flex
   align-items: center
   justify-content: center
   cursor: pointer
 
 .hero__button--outline
-  border: 1px solid $color-gold
+  border: 1px solid $color-brand
   background: $color-white
-  color: $color-gold
+  color: $color-brand
 
 .hero__button--solid
-  background: $color-gold
+  background: $color-brand
   color: $color-white
   border: none
