Style unlock and max withdrawal buttons

--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -68,6 +68,20 @@
   font-family: Roboto
   margin-top: 8px
 
+.deposit__unlocks
+  display: flex
+  align-items: center
+  justify-content: space-between
+  width: 100%
+
+.deposit__unlock
+  border: none
+  background: none
+  color: $color-brand
+  font-size: 16px
+  cursor: pointer
+  padding-top: 8px
+
 .deposit__button
   width: 360px
   margin-top: 16px
