--- a/client/src/layout/components/withdraw.sass
+++ b/client/src/layout/components/withdraw.sass
@@ -68,6 +68,14 @@
   font-family: Roboto
   margin-top: 8px
 
+.withdraw__max
+  border: none
+  background: none
+  color: $color-brand
+  font-size: 16px
+  cursor: pointer
+  padding-top: 8px
+
 .withdraw__button
   width: 360px
   margin-top: 16px
