--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -52,3 +52,47 @@
   color: $color-brand
   font-weight: 300
   font-size: 18px
+
+// DatePicker Styles
+
+.react-datepicker-wrapper
+  width: 100%
+
+.react-datepicker__input-container input
+  width: 100%
+  height: 32px
+  text-align: center
+  font-size: 18px
+  font-family: Roboto
+  font-weight: 300
+  border: 1px solid rgba($color-black, 0.5)
+  border-radius: $border-radius
+
+.react-datepicker__header
+  background: $color-white
+  border-bottom: 1px solid rgba($color-black, 0.5)
+
+.react-datepicker__current-month
+  font-family: Roboto
+  font-weight: 500
+
+.react-datepicker__navigation--previous
+  border-right-color: $color-brand
+
+.react-datepicker__navigation--next
+  border-left-color: $color-brand
+
+.react-datepicker__day-name
+  font-family: Roboto
+
+.react-datepicker__day
+  font-family: Roboto
+
+.react-datepicker__day--selected
+  background: $color-brand
+
+.react-datepicker__day--selected:hover
+  background: $color-brand
+
+.react-datepicker__day--today
+  font-weight: 400
