Finishing touch on expiration date picker

--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -79,7 +79,13 @@
 .react-datepicker__navigation--previous
   border-right-color: $color-brand
 
+.react-datepicker__navigation--previous:hover
+  border-right-color: $color-brand
+
 .react-datepicker__navigation--next
+  border-left-color: $color-brand
+
+.react-datepicker__navigation--next:hover
   border-left-color: $color-brand
 
 .react-datepicker__day-name
