--- a/client/src/layout/components/userfunds.sass
+++ b/client/src/layout/components/userfunds.sass
@@ -8,6 +8,7 @@
   justify-content: center
   min-height: calc(100vh - #{$footer-height})
   width: 100%
+  padding-top: $nav-height
 
 .user-funds__header
   font-size: 40px
