Basic styling and dropdown management

--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -54,6 +54,8 @@
   font-weight: 300
   font-size: 24px
   margin-top: 16px
+  height: 70px
+  position: relative
 
 // TODO: Make placeholder text faded, but not actual input text
 .deposit__input
