Add arrows to dropdown menu

--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -70,6 +70,18 @@
   font-family: Roboto
   margin-top: 8px
 
+.deposit__input--token
+  background-image: url('../../assets/down-arrow.svg')
+  background-repeat: no-repeat
+  background-position: 95% 50%
+  padding: 0 8px
+
+.deposit__input--token.open
+  background-image: url('../../assets/up-arrow.svg')
+  background-repeat: no-repeat
+  background-position: 95% 50%
+  padding: 0 8px
+
 .deposit__unlocks
   display: flex
   align-items: center
