--- a/client/src/layout/config/_base.sass
+++ b/client/src/layout/config/_base.sass
@@ -7,3 +7,8 @@ body
   font-family: Roboto, sans-serif
   margin: 0
   overflow-x: hidden
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button
+  -webkit-appearance: none
+  margin: 0
