Add token logos to assets

--- a/client/src/layout/components/assets.sass
+++ b/client/src/layout/components/assets.sass
@@ -42,8 +42,14 @@
   font-weight: 400
   color: $color-black
 
+.assets__asset-logo
+  width: 24px
+  margin-right: 8px
+
 .assets__asset-info--amount
   font-weight: 300
+  flex-grow: 1
+  text-align: right
 
 .asset__empty
   font-weight: 300
