--- a/client/src/layout/config/_colors.sass
+++ b/client/src/layout/config/_colors.sass
@@ -2,5 +2,6 @@ $color-black: #2b2b2b
 $color-white: #FFFFFF
 $color-gold: #FFB800
 $color-grey: #878787
+$color-light-grey: #e4e4e4
 
 $color-brand: $color-gold
