Set warning for invalid beneficiary address

--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -42,6 +42,12 @@
   font-weight: 300
   font-family: Roboto
 
+.create-fund__invalid
+  color: $color-brand
+  font-size: 16px
+  padding-top: 8px
+  margin: 0
+
 .create-fund__button
   width: 100%
   margin-top: 16px
