Disable button if invalid beneficiary address

--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -52,6 +52,10 @@
   width: 100%
   margin-top: 16px
 
+.create-fund__button.disabled
+  background: $color-grey
+  cursor: default
+
 .create-fund__link
   text-decoration: none
   margin-top: 8px
