--- a/client/src/layout/components/userfunds.sass
+++ b/client/src/layout/components/userfunds.sass
@@ -24,9 +24,12 @@
   font-weight: 300
   color: $color-black
   list-style: none
+  display: flex
+  align-items: center
+  height: 36px
 
-.user-funds__icon
-  margin-left: 8px
+.user-funds__value
+  margin-right: 12px
 
 .user-funds__button
   margin-top: 32px
