Render funds in order

--- a/client/src/layout/components/userfunds.sass
+++ b/client/src/layout/components/userfunds.sass
@@ -15,6 +15,23 @@
   font-weight: 400
   color: $color-black
 
+.user-funds__table
+  width: 320px
+
+.user-funds__table-header
+  font-size: 18px 
+  font-weight: 400
+  color: $color-black
+  text-align: left
+
+.user-funds__table-data
+  font-size: 16px
+  font-weight: 300
+  color: $color-black
+
+.user-funds__table-data--link
+  text-align: right
+
 .user-funds__link
   text-decoration: none
   cursor: pointer
