--- a/client/src/layout/components/userfunds.sass
+++ b/client/src/layout/components/userfunds.sass
@@ -5,7 +5,7 @@
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: center
+  justify-content: flex-start
   min-height: calc(100vh - #{$footer-height})
   width: 100%
   padding-top: $nav-height
