Add nav error for no web3

--- a/client/src/layout/components/nav.sass
+++ b/client/src/layout/components/nav.sass
@@ -11,6 +11,7 @@
   top: 0
   left: 0
   right: 0
+  z-index: -1
 
 .nav__logo
   width: 32px
@@ -30,3 +31,16 @@
   border-radius: $border-radius
   color: $color-brand
   padding: 6px 12px
+
+.nav__error
+  width: 100%
+  height: 30px
+  display: flex
+  align-items: center
+  justify-content: center
+
+.nav__error-link
+  margin-left: 4px
+  cursor: pointer
+  text-decoration: none
+  color: $color-brand
