--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -41,3 +41,28 @@
 .fund__detail--bold
   font-weight: 400
   margin-right: 4px
+
+.fund-error
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  width: 100%
+  min-height: calc(100vh - #{$footer-height})
+
+.fund-error__header
+  font-size: 36px
+  font-weight: 500
+  color: $color-brand
+  margin: 16px 0
+
+.fund-error__info
+  font-size: 18px
+  font-weight: 300
+  color: $color-black
+
+.fund-error__link
+  margin-left: 8px
+  color: $color-brand
+  text-decoration: none
+  font-weight: 400
