--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -8,6 +8,7 @@
   justify-content: center
   width: 100%
   min-height: calc(100vh - #{$footer-height})
+  padding-top: 60px
 
 .fund__expiration
   font-size: 28px
