Add gradient to solid button

--- a/client/src/layout/components/button.sass
+++ b/client/src/layout/components/button.sass
@@ -20,6 +20,6 @@
   color: $color-brand
 
 .hero__button--solid
-  background: $color-brand
+  background: linear-gradient(to bottom, #FFB800 ,#EEAC00)
   color: $color-white
   border: none
