Modify hero styling

--- a/client/src/layout/components/hero.sass
+++ b/client/src/layout/components/hero.sass
@@ -19,8 +19,16 @@
   color: $color-black
   font-size: 24px
   font-weight: 300
+  margin: 16px 0
 
 .hero__buttons
   display: flex
+  flex-direction: column
   align-items: center
-  margin-top: 32px
+  margin-top: 16px
+
+.hero__learn-more
+  color: $color-brand
+  font-size: 24px
+  margin-top: 16px
+  text-decoration: none
