--- a/client/src/layout/components/nav.sass
+++ b/client/src/layout/components/nav.sass
@@ -30,6 +30,8 @@
   border-radius: $border-radius
   color: $color-brand
   padding: 6px 12px
+  font-size: 16px
+  font-weight: 300
 
 // Error if no web3
 
