Set colors as variables

--- a/client/src/layout/components/button.sass
+++ b/client/src/layout/components/button.sass
@@ -20,6 +20,6 @@
   color: $color-brand
 
 .hero__button--solid
-  background: linear-gradient(to bottom, #FFB800 ,#EEAC00)
+  background: linear-gradient(to bottom, $color-brand , $color-brand-dark)
   color: $color-white
   border: none
