--- a/client/src/layout/config/_colors.sass
+++ b/client/src/layout/config/_colors.sass
@@ -1,7 +1,9 @@
 $color-black: #2b2b2b
 $color-white: #FFFFFF
 $color-gold: #FFB800
+$color-gold-dark: #EEAC00
 $color-grey: #878787
 $color-light-grey: #e4e4e4
 
 $color-brand: $color-gold
+$color-brand-dark: $color-gold-dark
