Fix button classnames and modify styling

--- a/client/src/layout/components/button.sass
+++ b/client/src/layout/components/button.sass
@@ -1,7 +1,7 @@
 @import '../config/_colors'
 @import '../config/_variables'
   
-.hero__button
+.button
   font-size: 32px
   height: 60px
   width: 320px
@@ -13,13 +13,15 @@
   align-items: center
   justify-content: center
   cursor: pointer
+  font-family: Roboto
+  font-weight: 300
 
-.hero__button--outline
+.button--outline
   border: 1px solid $color-brand
   background: $color-white
   color: $color-brand
 
-.hero__button--solid
+.button--solid
   background: linear-gradient(to bottom, $color-brand , $color-brand-dark)
   color: $color-white
   border: none
