--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -41,6 +41,7 @@
   font-size: 18px
   font-weight: 300
   font-family: Roboto
+  box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1)
 
 .create-fund__invalid
   color: $color-brand
@@ -77,6 +78,7 @@
   font-weight: 300
   border: 1px solid rgba($color-black, 0.5)
   border-radius: $border-radius
+  box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1)
 
 .react-datepicker__header
   background: $color-white
