--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -94,6 +94,7 @@
   color: $color-grey
   font-family: Roboto
   margin-top: 8px
+  box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1)
 
 .deposit__unlocks
   display: flex
