--- a/client/src/layout/components/tokeninput.sass
+++ b/client/src/layout/components/tokeninput.sass
@@ -31,6 +31,7 @@
   font-weight: 400
   color: $color-grey
   font-family: Roboto
+  box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1)
 
 .token-input__logo
   width: 36px
