--- a/client/src/layout/components/button.sass
+++ b/client/src/layout/components/button.sass
@@ -18,7 +18,7 @@
 
 .button--outline
   border: 1px solid $color-brand
-  background: $color-white
+  background: linear-gradient($color-white, #fdfdfd)
   color: $color-brand
 
 .button--solid
