Manage user funds positioning

--- a/client/src/layout/components/userfunds.sass
+++ b/client/src/layout/components/userfunds.sass
@@ -10,6 +10,10 @@
   width: 100%
   padding-top: $nav-height
 
+.user-funds.center
+  padding-top: 0
+  justify-content: center
+
 .user-funds__header
   font-size: 40px
   font-weight: 400
