Add general warnings

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -24,7 +24,7 @@
   margin: 24px 0
 
 .fund__button
-  margin: 8px 0
+  margin: 8px 0 0 0
   width: 380px
 
 .fund__details
@@ -67,3 +67,6 @@
   color: $color-brand
   text-decoration: none
   font-weight: 400
+
+.fund__warning
+  width: 380px
