Add deposit warning

--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -82,6 +82,9 @@
 .deposit__token-button-carat
   margin-left: 8px
 
+.deposit__warning
+  width: 360px
+
 // TODO: Make placeholder text faded, but not actual input text
 .deposit__input
   height: 32px
