--- a/client/src/layout/components/hero.sass
+++ b/client/src/layout/components/hero.sass
@@ -1,5 +1,6 @@
 @import '../config/_colors'
 @import '../config/_variables'
+@import '../config/_breakpoints'
   
 .hero
   display: flex
@@ -14,12 +15,22 @@
   font-size: 48px
   font-weight: 500
   margin-bottom: 0
+  text-align: center
+  max-width: 90vw
+
+  +media($breakpoint-sm)
+    font-size: 40px
 
 .hero__subheader
   color: $color-black
   font-size: 24px
   font-weight: 300
   margin: 16px 0
+  text-align: center
+  max-width: 90vw
+
+  +media($breakpoint-sm)
+    font-size: 18px
 
 .hero__buttons
   display: flex
@@ -27,9 +38,21 @@
   align-items: center
   margin-top: 16px
 
+  +media($breakpoint-sm)
+    margin-top: 0
+
+.hero__button
+  max-width: 90vw
+
+  +media($breakpoint-sm)
+    font-size: 24px
+
 .hero__learn-more
   color: $color-brand
   font-size: 24px
   margin-top: 16px
   text-decoration: none
   font-weight: 300
+
+  +media($breakpoint-sm)
+    font-size: 20px
