--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -1,5 +1,6 @@
 @import '../config/_colors'
 @import '../config/_variables'
+@import '../config/_breakpoints'
 
 .fund
   display: flex
@@ -8,12 +9,13 @@
   justify-content: center
   width: 100%
   min-height: calc(100vh - #{$footer-height})
-  padding-top: 60px
+  padding-top: $nav-height
 
 .fund__expiration
   font-size: 28px
   font-weight: 400
   color: $color-black
+  margin-top: 8px
 
 .fund__expiration--until
   color: $color-grey
@@ -22,10 +24,12 @@
 .fund__expiration--unlocked
   font-size: 36px
   margin: 24px 0
+  margin-top: 8px
 
 .fund__button
   margin: 8px 0 0 0
   width: 380px
+  max-width: 90vw
 
 .fund__details
   display: flex
@@ -70,3 +74,4 @@
 
 .fund__warning
   width: 380px
+  max-width: 90vw
