--- a/client/src/layout/components/deposit.sass
+++ b/client/src/layout/components/deposit.sass
@@ -12,6 +12,7 @@
   border-radius: $border-radius
   border: 1px solid $color-grey
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25)
+  max-width: 100vw
 
 .deposit__background
   position: absolute
@@ -57,6 +58,7 @@
   height: 70px
   position: relative
   width: 360px
+  max-width: 90vw
 
 .deposit__token-button
   width: 100%
@@ -84,6 +86,7 @@
 
 .deposit__warning
   width: 360px
+  max-width: 90vw
 
 // TODO: Make placeholder text faded, but not actual input text
 .deposit__input
@@ -98,6 +101,7 @@
   font-family: Roboto
   margin-top: 8px
   box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1)
+  max-width: 90vw
 
 .deposit__unlocks
   display: flex
@@ -116,6 +120,7 @@
 .deposit__button
   width: 360px
   margin-top: 16px
+  max-width: 90vw
 
 .deposit__button.disabled
   background: $color-grey
