Add additional mobile optimizations

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -31,6 +31,9 @@
   width: 380px
   max-width: 90vw
 
+  +media($breakpoint-sm)
+    font-size: 24px
+
 .fund__details
   display: flex
   flex-direction: column
