--- a/client/src/layout/components/invalidfund.sass
+++ b/client/src/layout/components/invalidfund.sass
@@ -18,6 +18,8 @@
   font-size: 18px
   font-weight: 300
   color: $color-black
+  text-align: center
+  max-width: 90vw
 
 .invalid-fund__link
   margin-left: 8px
