--- a/client/src/layout/components/assets.sass
+++ b/client/src/layout/components/assets.sass
@@ -1,5 +1,6 @@
 @import '../config/_colors'
 @import '../config/_variables'
+@import '../config/_breakpoints'
 
 .assets
   display: flex
@@ -22,6 +23,9 @@
   color: $color-black
   margin: 8px 0
 
+  +media($breakpoint-sm) 
+    font-size: 20px
+
 .assets__list
   display: flex
   flex-direction: column
@@ -42,6 +46,9 @@
   font-size: 20px
   font-weight: 400
   color: $color-black
+
+  +media($breakpoint-sm) 
+    font-size: 18px
 
 .assets__asset-logo
   width: 24px
