--- a/client/src/layout/components/fundcreated.sass
+++ b/client/src/layout/components/fundcreated.sass
@@ -1,4 +1,5 @@
 @import '../config/_variables'
+@import '../config/_breakpoints'
   
 .fund-created
   min-height: calc(100vh - #{$footer-height})
@@ -6,3 +7,14 @@
   display: flex
   align-items: center
   justify-content: center
+
+  +media($breakpoint-md)
+    flex-direction: column
+
+.fund-created__button
+  max-width: 90vw
+
+  +media($breakpoint-md)
+    margin: 8px 0
+  +media($breakpoint-sm)
+    font-size: 24px
