Display fund etherscan link

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -38,7 +38,7 @@
   display: flex
   flex-direction: column
   align-items: center
-  margin-top: 16px
+  margin-top: 8px
 
 .fund__detail
   font-size: 18px
@@ -49,6 +49,13 @@
 .fund__detail--bold
   font-weight: 400
   margin-right: 4px
+
+.fund__detail-link
+  font-size: 14px
+  font-weight: 300
+  color: $color-brand
+  text-decoration: none
+  margin-bottom: 4px 
 
 .fund-error
   display: flex
