Modify positioning of fund elements

--- a/client/src/layout/components/assets.sass
+++ b/client/src/layout/components/assets.sass
@@ -59,7 +59,8 @@
   flex-grow: 1
   text-align: right
 
-.asset__empty
+.assets__empty
   font-weight: 300
   color: $color-black
   margin: 8px 0 0 0
+  text-align: center
