--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -16,6 +16,7 @@
   font-weight: 400
   color: $color-black
   margin-top: 8px
+  text-align: center
 
 .fund__expiration--until
   color: $color-grey
