Make warning more clear

--- a/client/src/layout/components/warning.sass
+++ b/client/src/layout/components/warning.sass
@@ -1,14 +1,14 @@
 @import '../config/_colors'
   
 .warning
-  border: 1px solid $color-brand
+  border: 1px solid $color-red
   border-radius: 3px
   padding: 8px
   margin-top: 8px
   width: 100%
 
 .warning__message
-  color: $color-brand
+  color: $color-red
   margin: 0
   font-size: 14px
   text-align: center
