--- a/client/src/layout/config/_colors.sass
+++ b/client/src/layout/config/_colors.sass
@@ -4,6 +4,7 @@ $color-gold: #FFB800
 $color-gold-dark: #EEAC00
 $color-grey: #878787
 $color-light-grey: #e4e4e4
+$color-red: #ba2b00
 
 $color-brand: $color-gold
 $color-brand-dark: $color-gold-dark
