Style and conditionally render settings button

--- a/client/src/layout/components/fund.sass
+++ b/client/src/layout/components/fund.sass
@@ -86,3 +86,9 @@
 .fund__warning
   width: 380px
   max-width: 90vw
+
+.fund__settings
+  margin: 4px 0
+  color: $color-red
+  font-size: 18px
+  cursor: pointer
