Manage invalid beneficiary address

--- a/client/src/layout/components/settings.sass
+++ b/client/src/layout/components/settings.sass
@@ -102,3 +102,10 @@
   width: 360px
   max-width: 90vw
   text-align: center
+  margin: 4px 0
+
+.settings__invalid
+  color: $color-red
+  font-size: 16px
+  margin: 0
+  margin-top: 8px
