Set message as position fixed

--- a/client/src/layout/components/message.sass
+++ b/client/src/layout/components/message.sass
@@ -4,7 +4,7 @@
 @import '../config/_breakpoints'
   
 .message
-  position: absolute
+  position: fixed
   bottom: $footer-height
   left: 60px
   font-size: 18px
