--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -59,6 +59,11 @@
   padding-top: 8px
   margin: 0
 
+.create-fund__address
+  font-size: 14px
+  font-weight: 400
+  color: $color-black
+
 .create-fund__button
   width: 100%
   margin-top: 8px
