--- a/client/src/layout/components/settings.sass
+++ b/client/src/layout/components/settings.sass
@@ -79,6 +79,11 @@
   box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1)
   max-width: 90vw
 
+.settings__address
+  font-size: 14px
+  font-weight: 400
+  color: $color-black
+
 .settings__button
   width: 360px
   max-width: 90vw
