--- a/client/src/layout/components/nav.sass
+++ b/client/src/layout/components/nav.sass
@@ -42,11 +42,27 @@
   padding: 6px 12px
   font-size: 16px
   font-weight: 300
+  display: flex
+  align-items: center
 
   +media($breakpoint-sm)
     font-size: 14px
   +media($breakpoint-xs)
     font-size: 12px
+
+.nav__avatar
+  height: 24px
+  width: 24px
+  border-radius: 50%
+  margin-left: 8px
+  border: 1px solid $color-gold
+
+  +media($breakpoint-sm)
+    width: 18px
+    height: 18px
+  +media($breakpoint-xs)
+    width: 14px
+    height: 14px
 
 // Error if no web3
 
