Improve datepicker styling

--- a/client/src/layout/components/createfund.sass
+++ b/client/src/layout/components/createfund.sass
@@ -87,6 +87,11 @@
 .react-datepicker-wrapper
   width: 100%
 
+.react-datepicker-popper
+  width: 380px
+  max-width: 90vw
+  margin-top: 0
+
 .react-datepicker__input-container input
   width: 100%
   height: 32px
