Add no wallet connected error

--- a/client/src/layout/components/message.sass
+++ b/client/src/layout/components/message.sass
@@ -21,3 +21,8 @@
 
   +media($breakpoint-sm) 
     left: 16px
+
+.message--error
+  background: inherit
+  border: 1px solid $color-red
+  color: $color-red
